--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <header>
     <div class="top-bar">
       <div class="top-bar-main">
-      <span><i class="fa fa-phone"></i> 087 245 0049/ 01 8137181</span>
+      <span><i class="fa fa-square-phone"></i> 087 245 0049/ 01 8137181</span>
       <span><i class="fa fa-envelope"></i> contact@sample.ie</span>
       <span><i class="fa fa-clock"></i> Mon-Thu: 8:00 am to 9:00 pm</span></div>
       <div class="socials">
@@ -56,14 +56,14 @@
         <input type="checkbox" checked/>
         I have read & agreed to the authorisation and the <a href="#">terms & conditions</a>.
       </label>
-      <button type="submit" class="rainbow-btn">Apply <i class="fa fa-arrow-right"></i></button>
+      <button type="submit" class="rainbow-btn">Apply <i class="fa fa-circle-right"></i></button>
     </form>
   </section>
   <section class="services">
     <div class="flip-box">
       <div class="flip-box-inner">
         <div class="flip-box-front service">
-          <i class="fa fa-rocket"></i>
+          <i class="fa fa-file-lines"></i>
           <h3>Start Up Services</h3>
           <p>We support entrepreneurs to build their businesses by providing them with the ideal company formation legal services.</p>
         </div>
