--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
       <input type="email" placeholder="Email ID"  name="email" required/>
       <input type="text" placeholder="PPS Number" name="password" required minlength="8" required/>
       <label>
-        <input type="checkbox" checked/>
+        <input type="checkbox" />
         I have read & agreed to the authorisation and the <a href="#">terms & conditions</a>.
       </label>
       <button type="submit" class="rainbow-btn">Apply <i class="fa fa-circle-right"></i></button>
